k8s/mediaserver/sonarr/deployment-pg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: mediaserver
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "psql -c \"create database radarr-logs\"" ]
          ports:
            - containerPort: 5432
          # volumeMounts:
          #   - mountPath: /var/lib/postgresql/data
          #     name: data
      volumes:
        - name: data
          nfs:
            server: 192.168.100.61
            path: /mnt/fast-pool1/docker-configs/postgres
