k8s/mediaserver/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: mediaserver
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:4.0.16
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /tv
              name: tvshows
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-pvc-pve
        - name: tvshows
          nfs:
            server: 192.168.100.160
            path: /tank-data/media/tv-shows
            readOnly: false
        - name: downloads
          nfs:
            server: 192.168.100.160
            path: /tank-data/media/torrents/
