k8s/mediaserver/sonarr/service-pg.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: mediaserver
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
    - port: 5432
