k8s/mediaserver/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: mediaserver
spec:
  type: LoadBalancer
  selector:
    app: sonarr
  ports:
    - port: 8989
