k8s/mediaserver/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: mediaserver
spec:
  ingressClassName: nginx
  rules:
    - host: "sonarr.enricoruggieri.com"
      https:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sonarr-service
                port:
                  number: 8989
  tls:
  - hosts:
    - sonarr.enricoruggieri.com
    secretName: internal-cert-tls
